--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DashboardApplication">
-        <activity android:name=".registerActivity"></activity>
+        <activity android:name=".dashboard"></activity>
+        <activity android:name=".registerActivity" />
         <activity android:name=".loginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
