--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://maven.google.com" }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
-
+        classpath 'com.google.gms:google-services:4.3.4'
+        classpath 'com.google.firebase:firebase-plugins:1.1.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
