--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DashboardApplication">
-        <activity android:name=".LoginadminActivity"></activity>
+        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".LoginadminActivity" />
         <activity android:name=".dashboard" />
         <activity android:name=".registerActivity" />
         <activity android:name=".loginActivity" />
